plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	// 구현된 Spring Security 버전 자동 관리 (Spring Boot가 관리합니다)
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.hibernate:hibernate-validator:7.0.5.Final'

	// jjwt 의존성 통합: 0.12.x로 통일
	implementation "io.jsonwebtoken:jjwt-api:0.12.5"
	implementation "io.jsonwebtoken:jjwt-impl:0.12.5"
	implementation "io.jsonwebtoken:jjwt-jackson:0.12.5"

	implementation 'org.slf4j:slf4j-api:2.0.9'
	implementation 'ch.qos.logback:logback-classic:1.4.11'


	implementation 'com.fasterxml.jackson.core:jackson-databind'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.548'

	implementation 'software.amazon.awssdk:s3:2.20.140' // 최신 버전 확인 후 업데이트
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // Spring Cloud AWS 사용 시


	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
//	implementation 'com.google.code.gson:gson:2.10.1'

	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	// Jackson 의존성 추가
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'redis.clients:jedis:4.0.1'  // Use the latest version



}



tasks.named('test') {
	useJUnitPlatform()
}
